test/runnable/imports/test10604b.d
module imports.test10604b;

public int bar(long) { return 2; }
