test/fail_compilation/fail1313b.d
int[] test()
out{}
body
{
    int a[2];
    return cast(int[])a;
}
